--- a/Referências.html
+++ b/Referências.html
@@ -13,12 +13,12 @@
                 Uso de neuro-interfaces nos processos de reabilitação de membros superiores em pacientes vítimas de AVC: uma mini revisão integrativa
             </h1>
             <div class="DivNomes">
-                <a href="https://orcid.org/0009-0002-7457-4448" class="OrTxt">Wesley Lima Guimarães¹ <img src="imagens/orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
-                <a href="https://orcid.org/0009-0005-2918-934X" class="OrTxt">Ana Paula Beirigo Barbosa¹ <img src="imagens/orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
-                <a href="https://orcid.org/0009-0001-5303-8251" class="OrTxt">Gerley Adriano Miranda Cruz¹ <img src="imagens/orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
-                <a href="#" class="OrTxt">Marcus Kalyel Ferreira  Godoi¹ <img src="imagens/orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
-                <a href="#" class="OrTxt">Salvador Rassi Filho¹ <img src="imagens/orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
-                <a href="https://orcid.org/0000-0001-7091-4850" class="OrTxt">Jalsi Tacon Aarruda² <img src="imagens/orcid.svg" class="OrIcon" alt="OrcidIcon"></a>
+                <a href="https://orcid.org/0009-0002-7457-4448" class="OrTxt">Wesley Lima Guimarães¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
+                <a href="https://orcid.org/0009-0005-2918-934X" class="OrTxt">Ana Paula Beirigo Barbosa¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
+                <a href="https://orcid.org/0009-0001-5303-8251" class="OrTxt">Gerley Adriano Miranda Cruz¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
+                <a href="#" class="OrTxt">Marcus Kalyel Ferreira  Godoi¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
+                <a href="#" class="OrTxt">Salvador Rassi Filho¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
+                <a href="https://orcid.org/0000-0001-7091-4850" class="OrTxt">Jalsi Tacon Aarruda² <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"></a>
                 <br/>    1. Discente do curso de medicina da Universidade Evangélica de Goiás - UniEVANGÉLICA. 
                 <br/>    2. Docente do curso de medicina da Universidade Evangélica de Goiás - UniEVANGÉLICA.
             </div>
@@ -87,7 +87,7 @@
 
     <footer>
         <div>
-            <a href="https://www4.unievangelica.edu.br/"><img src="imagens/UniEVANGÉLICA-color.png" alt="Logo UniEVANGÉLICA" id="logo"></a>
+            <a href="https://www4.unievangelica.edu.br/"><img src="UniEVANGÉLICA-color.png" alt="Logo UniEVANGÉLICA" id="logo"></a>
         </div>
     </footer>
 </body>
