--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="https://orcid.org/0009-0001-5303-8251" class="OrTxt">Gerley Adriano Miranda Cruz¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
                 <a href="#" class="OrTxt">Marcus Kalyel Ferreira  Godoi¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
                 <a href="#" class="OrTxt">Salvador Rassi Filho¹ <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"> ,</a>
-                <a href="https://orcid.org/0000-0001-7091-4850" class="OrTxt">Jalsi Tacon Aarruda² <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"></a>
+                <a href="https://orcid.org/0000-0001-7091-4850" class="OrTxt">Jalsi Tacon Arruda² <img src="orcid.svg" class="OrIcon" alt="OrcidIcon"></a>
                 <br/>    1. Discente do curso de medicina da Universidade Evangélica de Goiás - UniEVANGÉLICA. 
                 <br/>    2. Docente do curso de medicina da Universidade Evangélica de Goiás - UniEVANGÉLICA.
             </div>
@@ -46,7 +46,7 @@
                 <a href="https://www.frontiersin.org/articles/10.3389/fnhum.2023.1117670/full">aqui</a>.
             </p>
             <p>
-                ³ FLESCHER, Sharlene N. et al. A brain-computer interface that evokes tactile sensations improves robotic arm control. <strong>Science</strong>, 
+                ³ FLESCHER, Sharlene et al. A brain-computer interface that evokes tactile sensations improves robotic arm control. <strong>Science</strong>, 
                 v. 372, 2021. DOI: <a href="https://doi.org/10.1126/science.abd0380">https://doi.org/10.1126/science.abd0380</a>. Disponível 
                 <a href="https://www.science.org/doi/10.1126/science.abd0380">aqui</a>.
             </p>
